# python-merkle-tree

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: 01-test.yml
src/apps/: merkle.py
tests/unit/apps/: test_merkle.py
